# global-workflow

./: .gitignore  Externals.cfg  INFO
docs/: Release_Notes.gfs.v15.2.0.txt  Release_Notes.gfs_downstream.v15.2.0.txt
env/: THEIA.env  WCOSS.env
jobs/: JGDAS_GEMPAK  JGDAS_GEMPAK_META_NCDC  JGFS_GEMPAK  JGFS_GEMPAK_META  JGFS_GEMPAK_NCDC_UPAPGIF  JGFS_PGRB2_SPEC_GEMPAK  JGFS_POSTSND  JGLOBAL_FORECAST  JGLOBAL_TROPCY_QC_RELOC
modulefiles/: gfs_bufr.theia  module-setup.sh.inc  module_base.theia  module_base.wcoss  module_base.wcoss_dell_p3  module_base_v16.hera
scripts/: exgempak_gfs_gif_ncdc_skew_t.sh.ecf  exgfs_postsnd.sh.ecf  exglobal_fcst_nemsfv3gfs.sh  exglobal_fcst_nemsfv3gfs_GSDsuite_nothmp.sh  exglobal_fcst_nemsfv3gfs_nochem.sh  exglobal_fcst_nemsfv3gfs_v16beta_gf_mynn.sh  prep_coupled_fcst.sh  run_iceocn_post.sh
sorc/: aero_extract.sh  build_all.sh  build_fre-nctools.sh  build_fv3.sh  build_fv3_ccpp.sh  build_fv3_ccpp_chem.sh  build_nemsio2nc.sh  build_prepchem_NC.sh  build_tropcy_NEMS.sh  checkout.sh  fv3gfs.fd  fv3gfs_build.cfg  fv3gfs_ccpp.fd  link_fv3gfs.sh  machine-setup.sh  partial_build.sh
sorc/nemsio2nc.fd/atm/: CMakeLists.txt
sorc/nemsio2nc.fd/atm/src/: CMakeLists.txt
syndat/: syndat_tcvitals.2019  syndat_tcvitals.2020
ush/: chgres_cube.sh  emcsfc_ice_blend.sh  emcsfc_snow.sh  fix_precip.sh  fv3gfs_chgres.sh  fv3gfs_downstream_nems.sh  fv3gfs_driver_grid.sh  fv3gfs_dwn_nems.sh  fv3gfs_filter_topo.sh  fv3gfs_make_grid.sh  fv3gfs_make_orog.sh  fv3ics.py  gfs_bufr.sh  gfs_nceppost.sh  gfs_sndp.sh  gfs_transfer.sh  global_chgres.sh  global_chgres_driver.sh  global_cycle.sh  global_cycle_driver.sh  hpssarch_gen.sh  hpssarch_gen_gmtb.sh  hpssarch_gen_gmtb_ncflux.sh  hpssarch_gen_gmtb_trk.sh  link_crtm_fix.sh  load_fv3gfs16_modules.sh  load_fv3gfs_modules.sh  minmon_xtrct_costs.pl  minmon_xtrct_gnorms.pl  minmon_xtrct_reduct.pl  ozn_xtrct.sh  radmon_ck_stdout.sh  radmon_err_rpt.sh  trim_rh.sh  (+6 more)
(+574 files in other folders)
